tests/errors/intrinsics16.f90
program main
    character(3), parameter :: ar1 = repeat(["abc", "#^1", "123"], [1, 2, 3])
end program